[package]
name = "domain-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
reqwest = { version = "0.12.9", features = ["stream"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
